# alignx

./: .clang-format  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pyproject.toml  vcpkg.json
benchmarks/: README.md
benchmarks/configs/: README.md  phase1_axf1_chunk_sizing_hg002.yaml  phase1_axf1_view_chr1_hg002.yaml  phase1_view_chr1_samtools.yaml  phase1_view_chrtoy_samtools.yaml
data/: README.md
docs/: README.md  architecture.md  roadmap.md
docs/adr/: README.md  adr-001-language-and-build.md  adr-002-axf-format-design.md  adr-003-index-design.md  adr-004-compression-and-acceleration-strategy.md  adr-005-axf-mvp-staging.md  adr-006-cram-support.md  adr-007-reference-identity-metadata.md
docs/design/: goals.md
docs/dev/: README.md
docs/research/: axf-mvp-smoke-results.md  axf-reader-query-followup.md  axf1-chunk-sizing-policy.md  axf1-cigar-codec-design.md  axf1-cloud-ready-index-assessment.md  axf1-compressed-payload-wrapper-design.md  axf1-lz4-compressed-payload-design.md  axf1-minimal-columnar-design.md  axf1-qname-codec-design.md  axf1-qual-avx2-investigation.md  axf1-qual-codec-design.md  axf1-qual-lossy-binning-design.md  axf1-qual-next-codec-design.md  axf1-qual-query-observation-design.md  axf1-seq-codec-design.md  axf1-tag-codec-design.md  draft-methods-section.md  illumina-benchmark-results.md  paper-draft.md  phase1-axf1-coverage-benchmark-results.md  phase1-axf1-view-benchmark-results.md  phase1-bam-view-findings.md  phase2-pileup-benchmark-results.md  sam-bam-cram-tradeoffs.md  v1-compression-benchmark-results.md  v1-query-benchmark-results.md
scripts/: bench_compression.sh  bench_mt_encode.sh  bench_pileup.sh  bench_query.sh  bench_region_query.ps1  bench_region_query.sh  check_benchmark_input.sh  generate_paper_figures.py  inspect_axf1_metadata.py  materialize_toy_bam.py  plan_axf1_chunk_sizing.sh  smoke_axf1_codecs.sh  smoke_axf_roundtrip.sh  summarize_axf1_columns.py
src/: main.cpp
src/analysis/: coverage.cpp  coverage.hpp  stats.cpp  stats.hpp
src/cli/: cli.cpp  runner.hpp  version.cpp  version.hpp
src/convert/: axf1_chunk_policy.cpp  axf1_chunk_policy.hpp  axf_to_bam.cpp  axf_to_bam.hpp  bam_to_axf.cpp  bam_to_axf.hpp
src/format/: axf1_file.cpp  axf1_file.hpp  axf_file.cpp  axf_file.hpp
src/index/: axf_index.cpp  axf_index.hpp  bai_reader.cpp  bai_reader.hpp  bam_index_projection.cpp  bam_index_projection.hpp  csi_reader.cpp  csi_reader.hpp
src/io/: bam_reader.cpp  bam_reader.hpp  bam_writer.cpp  bam_writer.hpp  fasta_reader.cpp  fasta_reader.hpp  reference_validator.cpp  reference_validator.hpp  sha256.cpp  sha256.hpp
src/python/: _alignx.pyi  bindings.cpp
src/python/alignx/: __init__.py  _dataframe.py
src/query/: axf1_coverage.cpp  axf1_coverage.hpp  axf1_view.cpp  axf1_view.hpp  axf_view.cpp  axf_view.hpp  bam_coverage.cpp  bam_coverage.hpp  record_filter.hpp  region.cpp  region.hpp  sam_utils.cpp  sam_utils.hpp
tests/: CMakeLists.txt
tests/python/: conftest.py  test_alignx.py  test_numpy_pandas.py
tests/scripts/: test_inspect_axf1_metadata.py  test_smoke_axf1_codecs.py  test_smoke_axf_roundtrip.py  test_summarize_axf1_columns.py
tests/toy_data/: README.md  toy_alignment.sam  toy_alignment.sorted.bam  toy_alignment.sorted.bam.bai  toy_alignment.sorted.bam.csi  toy_alignment.sorted.cram  toy_alignment.sorted.cram.crai  toy_ref.fa
tests/unit/: test_axf1_chunk_policy.cpp  test_axf1_file.cpp  test_axf1_view.cpp  test_axf_file.cpp  test_axf_index.cpp  test_axf_to_bam.cpp  test_axf_view.cpp  test_bai_reader.cpp  test_bam_index_projection.cpp  test_bam_reader.cpp  test_bam_to_axf.cpp  test_cli.cpp  test_coverage.cpp  test_csi_reader.cpp  test_fasta_reader.cpp  test_reference_validator.cpp  test_region.cpp  test_sam_utils.cpp  test_scaffold.cpp  test_sha256.cpp  test_stats.cpp
